objects/mirketappm__Resource_Allocation__c.object
<CustomObject>
    <description>allocation of the resources to various projects.</description>
    <fields>
        <fullName>mirketappm__Approved_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mirketappm__Cost__c</fullName>
        <description>amount spend on the resource</description>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>mirketappm__From_Date__c</fullName>
        <description>date when resource is allocated to the project</description>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mirketappm__Number_of_Hours__c</fullName>
        <description>time spend by resource in a project</description>
        <label>Number of Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mirketappm__Percentage__c</fullName>
        <description>occupancy of the resource in project</description>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>mirketappm__Project_Name__c</fullName>
        <description>lookup of the project object.</description>
        <label>Project Name</label>
        <referenceTo>mirketappm__Project__c</referenceTo>
        <relationshipLabel>Resources Allocation</relationshipLabel>
        <relationshipName>Resources_Allocation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>mirketappm__Resource_Name__c</fullName>
        <description>lookup of the resource object</description>
        <label>Resource Name</label>
        <referenceTo>mirketappm__Resource__c</referenceTo>
        <relationshipLabel>Resources Allocation</relationshipLabel>
        <relationshipName>Resources_Allocation</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>mirketappm__Role_In_Project__c</fullName>
        <description>role of the employee in a particular project</description>
        <label>Role In Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>QA Engineer</fullName>
                </value>
                <value>
                    <fullName>Senior Developer</fullName>
                </value>
                <value>
                    <fullName>Senior QA Engineer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mirketappm__To_Date__c</fullName>
        <description>date till resource is allocated to the project</description>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <label>Resource Allocation</label>
    <listViews>
        <fullName>mirketappm__All</fullName>
        <columns>NAME</columns>
        <columns>mirketappm__Project_Name__c</columns>
        <columns>mirketappm__From_Date__c</columns>
        <columns>mirketappm__To_Date__c</columns>
        <columns>mirketappm__Resource_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>Resource Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resources Allocation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>